--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,8 +24,10 @@
         android:layout_height="168dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="222dp"
-        android:layout_marginEnd="-2dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="191dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="372dp"
         android:text="DREAM MART"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -60,7 +62,7 @@
         android:layout_marginRight="15dp"
         android:background="@drawable/input_design"
         android:hint="@string/enterthephonenumber"
-        android:inputType="number"
+        android:inputType="phone"
         android:padding="20dp"
         android:textColor="@color/cardview_light_background"
         android:textColorHint="@color/cardview_light_background"
