--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,35 +9,18 @@
 
     <ImageView
         android:id="@+id/register_applogo"
-        android:layout_width="322dp"
-        android:layout_height="159dp"
+        android:layout_width="wrap_content"
+        android:layout_height="237dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="530dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="126dp"
+        android:layout_marginEnd="81dp"
+        android:layout_marginBottom="368dp"
         android:padding="5dp"
         android:src="@drawable/logo3" />
-
-    <TextView
-        android:id="@+id/app_slogan"
-        android:layout_width="227dp"
-        android:layout_height="74dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="238dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="418dp"
-        android:text="@string/app_slogan"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/design_default_color_background"
-        android:textSize="33sp"
-        android:textStyle="bold|italic" />
 
     <EditText
         android:id="@+id/register_username_input"
@@ -107,5 +90,18 @@
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/app_slogan"
+        android:layout_width="281dp"
+        android:layout_height="66dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="622dp"
+        android:text="@string/app_slogan"
+        android:textAlignment="center"
+        android:textColor="@color/design_default_color_background"
+        android:textSize="32sp" />
 
 </RelativeLayout>
